--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,7 +1,10 @@
 @import "size-mixins";
 @import "colors";
+@import "bootstrap.min.scss";
 @import "footer";
 @import "header";
+@import "faq";
+
 
 html,
 body {
