--- a/app/styles/_footer.scss
+++ b/app/styles/_footer.scss
@@ -37,7 +37,7 @@
           line-height: 1.8;
           letter-spacing: normal;
           text-align: left;
-          color: #000000;
+          color: $black;
           display: block;
           margin-top: size-sm(32);
           margin-bottom: size-sm(12);
@@ -50,14 +50,14 @@
           line-height: 1.8;
           letter-spacing: normal;
           text-align: left;
-          color: #000000;
+          color: $black;
           display: block;
         }
       }
     }
     .social-link{
       margin-top:size-sm(45);
-      align-items: flex-end;
+      align-items: center;
       display: flex;
       justify-content: center;
       .facebook{
@@ -122,7 +122,7 @@
             line-height: 1.8;
             letter-spacing: normal;
             text-align: left;
-            color: #000000;
+            color: $black;
             display: block;
             margin-top: size-md(20);
             margin-bottom: size-md(11);
@@ -135,7 +135,7 @@
             line-height: 1.8;
             letter-spacing: normal;
             text-align: left;
-            color: #000000;
+            color: $black;
             display: block;
           }
         }
@@ -199,7 +199,7 @@
             line-height: 1.8;
             letter-spacing: normal;
             text-align: left;
-            color: #000000;
+            color: $black;
             display: block;
             margin-top: size-lg(30);
             margin-bottom: size-lg(12);
@@ -212,7 +212,7 @@
             line-height: 1.8;
             letter-spacing: normal;
             text-align: left;
-            color: #000000;
+            color: $black;
             display: block;
           }
         }
