page dummy content

--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -1,10 +1,11 @@
 @import "size-mixins";
 @import "colors";
 @import "bootstrap.min.scss";
+@import "nanogallery2.woff.min.scss";
+@import "nanogallery2.min.scss";
 @import "footer";
 @import "header";
 @import "faq";
-
 
 html,
 body {
